# agent-memory-gateway

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  README_EN.md  pyproject.toml
.githooks/: pre-push
.impeccable/: design.json
docs/: central-admin.md  container-sidecar.md  deployment.md  design-v2.md  design.md  development.md  importing-existing-memory.md  operations.md  quickstart.md  rationale.md
examples/: README.md  codex-mcp.json  hermes-mcp.json  openclaw-http.md  principals.example.json
schema/: gbrain_adapter.sql
scripts/: check-admin-health.ps1  check-public-sensitive.ps1  deploy-fn-release.ps1  install-git-hooks.ps1  install-sidecar-autostart.ps1  open-central-admin.ps1  setup-central-admin.ps1  setup-container-sidecar.ps1  setup-local-demo.ps1  setup-shared-memory.ps1  start-admin-console.ps1  start-local-demo.ps1  start-sidecar-mcp.ps1  start-sidecar.ps1
tests/: test_access_token.py  test_admin_check.py  test_admin_console.py  test_admin_service.py  test_auth_and_store.py  test_auth_timing.py  test_bootstrap.py  test_central_admin_setup.py  test_container_setup.py  test_crypto_and_event_contract.py  test_crystal_service.py  test_db_pool.py  test_device_key.py  test_device_key_permissions.py  test_device_pair.py  test_feedback_service.py  test_file_credential.py  test_gateway_admin.py  test_gateway_body_limit.py  test_gateway_health.py  test_gateway_tls.py  test_gbrain.py  test_gbrain_backend.py  test_hybrid_retrieval.py  test_identity_service.py  test_local_provider.py  test_memory_app.py  test_metadata_store.py  test_outbox.py  (+20 more)
(+83 files in other folders)
